3012: Phase 3.1: adjusted checkout data form width on N7/N10 portrait/landscape

--- a/project/res/values-sw600dp-port/dimens.xml
+++ b/project/res/values-sw600dp-port/dimens.xml
@@ -37,6 +37,6 @@
     <dimen name="bucket_heading_top_margin">8dp</dimen>
 
     <!-- Checkout -->
-    <dimen name="tablet_checkout_data_form_margin_x">32dp</dimen>
+    <dimen name="tablet_checkout_data_form_width">@dimen/match_parent</dimen>
 
 </resources>
