--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -49,18 +49,20 @@
 
     <FrameLayout
         android:id="@+id/traveler_form_container"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/tablet_checkout_data_form_width"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/tablet_checkout_data_form_margin_x"
-        android:layout_marginRight="@dimen/tablet_checkout_data_form_margin_x"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="@dimen/tablet_checkout_form_padding_x"
+        android:layout_marginRight="@dimen/tablet_checkout_form_padding_x"
         android:visibility="invisible" />
 
     <FrameLayout
         android:id="@+id/payment_form_container"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/tablet_checkout_data_form_width"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/tablet_checkout_data_form_margin_x"
-        android:layout_marginRight="@dimen/tablet_checkout_data_form_margin_x"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="@dimen/tablet_checkout_form_padding_x"
+        android:layout_marginRight="@dimen/tablet_checkout_form_padding_x"
         android:visibility="invisible" />
 
 </FrameLayout>
