--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -18,6 +18,75 @@
         android:layout_gravity="top"
         android:background="@drawable/ab_gradient"/>
 
+    <!-- CVV -->
+
+    <FrameLayout
+        android:id="@+id/cvv_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="?android:attr/actionBarSize"/>
+
+    <!-- Booking Unavailable -->
+
+    <FrameLayout
+        android:id="@+id/booking_unavailable_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="?android:attr/actionBarSize"/>
+
+    <!-- Checkout Forms -->
+
+    <FrameLayout
+        android:id="@+id/checkout_forms_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top"/>
+
+    <!-- Slide To Purchase -->
+
+    <FrameLayout
+        android:id="@+id/slide_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/slide_to_purchase_container_height"
+        android:layout_gravity="bottom"
+        android:visibility="gone"/>
+
+    <!-- "Now Booking" progressbar -->
+
+    <LinearLayout
+        android:id="@+id/booking_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="?android:attr/actionBarSize">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="@integer/tablet_checkout_forms_left_margin_weight"/>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ProgressBar
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"/>
+        </FrameLayout>
+    </LinearLayout>
+
+    <!-- Confirmation -->
+
+    <FrameLayout
+        android:id="@+id/confirmation_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="?android:attr/actionBarSize"/>
+
+    <!-- Trip Bucket -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -84,69 +153,4 @@
             android:layout_weight="2" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2">
-
-            <FrameLayout
-                android:id="@+id/cvv_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <FrameLayout
-                android:id="@+id/booking_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center">
-
-                    <ProgressBar
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        android:indeterminate="true"/>
-                </LinearLayout>
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/booking_unavailable_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <FrameLayout
-                android:id="@+id/checkout_forms_and_slide_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <FrameLayout
-                    android:id="@+id/checkout_forms_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="top"/>
-
-                <FrameLayout
-                    android:id="@+id/slide_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/slide_to_purchase_container_height"
-                    android:layout_gravity="bottom"
-                    android:visibility="gone"/>
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/confirmation_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </FrameLayout>
-        </FrameLayout>
-    </LinearLayout>
 </com.expedia.bookings.widget.FrameLayoutTouchController>
