--- a/project/res/layout/fragment_results_list_search_error.xml
+++ b/project/res/layout/fragment_results_list_search_error.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.CenteredCaptionedIcon android:id="@+id/empty_bucket_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/tablet_white_pane_bg"
-    app:svg="@raw/ic_tablet_trip_bucket_suitcase" />
+    android:background="@color/tablet_white_pane_bg" />
