3012: Made checkout data forms vertically centered

--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -39,8 +39,7 @@
     <FrameLayout
         android:id="@+id/checkout_forms_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="top"/>
+        android:layout_height="match_parent"/>
 
     <!-- Slide To Purchase -->
 
