--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -51,7 +51,7 @@
         android:id="@+id/traveler_form_container"
         android:layout_width="@dimen/tablet_checkout_data_form_width"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:layout_marginLeft="@dimen/tablet_checkout_form_padding_x"
         android:layout_marginRight="@dimen/tablet_checkout_form_padding_x"
         android:visibility="invisible" />
@@ -60,7 +60,7 @@
         android:id="@+id/payment_form_container"
         android:layout_width="@dimen/tablet_checkout_data_form_width"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:layout_marginLeft="@dimen/tablet_checkout_form_padding_x"
         android:layout_marginRight="@dimen/tablet_checkout_form_padding_x"
         android:visibility="invisible" />
